# lux-llm-factory

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
.memory/: board-config.md
.setup-state/: lock-manifest.json
data/processed/: nrule_eval.jsonl  nrule_train.jsonl
docs/: finetuning-modes.md
docs/architecture/decisions/: 0001-python-runtime-and-platform-support.md  0002-dependency-lock-and-resolution-strategy.md  0003-training-stack-orchestration-contract.md  0004-environment-profiles-and-progression.md  0005-canonical-command-contract-versioning.md  0006-reproducibility-evidence-schema-and-digests.md  0007-llm-testing-baseline-and-benchmark-strategy.md
docs/envisioning/: README.md  structure.md
docs/features/deterministic-python-foundation/: commands.md  conformance.md  data-model.md  handoff-envelope.md  lock-governance.md  measurement-protocol.md  plan.md  profile-progression.md  research.md  review-log.md  setup.md  spec.md  tasks.md
docs/features/deterministic-python-foundation/contracts/: environment-foundation-contract.md  error-codes.md  lock-manifest-schema.md
docs/features/deterministic-python-foundation/policy/: dependency-rules.yaml  environment-policy.yaml  profiles.yaml
notebooks/: platform-agnostic-training.ipynb
scripts/: dependency_policy.py  env_errors.py  env_policy.py  envctl.py  lock_identity.py  runtime_profiles.py  train_first_sft.py
tests/: test_envctl.py
training/configs/: first-run-cpu-gemma.yaml  first-run-cpu.yaml
