[project]
name = "lux-llm-factory"
version = "0.1.0"
description = "Reproducible Luxembourgish LLM finetuning factory"
requires-python = ">=3.14"
dependencies = [
  "accelerate>=0.33.0",
  "datasets>=2.20.0",
  "evaluate>=0.4.1,<0.5.0",
  "peft>=0.12.0",
  "pyyaml>=6.0.2",
  "sentencepiece>=0.2.0",
  "torch>=2.4.0",
  "transformers>=4.44.0",
  "trl>=0.10.1",
]

[dependency-groups]
qlora = [
  "bitsandbytes>=0.43.0; platform_system != 'Windows'",
]

[tool.uv]
default-groups = []
